src/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | COMPLEX
  11       | CLASS IDENTIFIER
  12       | Type '[' ']'

  13  ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  14  ExtendsClause : EXTENDS IDENTIFIER
  15                |

  16  FieldList : FieldList VariableDef
  17            | FieldList FunctionDef
  18            |

  19  Formals : VariableList
  20          |

  21  VariableList : VariableList ',' Variable
  22               | Variable

  23  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  24              | Type IDENTIFIER '(' Formals ')' StmtBlock

  25  StmtBlock : '{' StmtList '}'

  26  StmtList : StmtList Stmt
  27           |

  28  Stmt : VariableDef
  29       | SimpleStmt ';'
  30       | IfStmt
  31       | WhileStmt
  32       | ForStmt
  33       | ReturnStmt ';'
  34       | PrintStmt ';'
  35       | BreakStmt ';'
  36       | StmtBlock
  37       | PrintCompStmt ';'

  38  SimpleStmt : LValue '=' Expr
  39             | Call
  40             |

  41  Receiver : Expr '.'
  42           |

  43  LValue : Receiver IDENTIFIER
  44         | Expr '[' Expr ']'

  45  Call : Receiver IDENTIFIER '(' Actuals ')'

  46  DefaultExpr : DEFAULT ':' Expr ';'

  47  CaseExprList : CaseExprList Constant ':' Expr ';'
  48               |

  49  Expr : CASE '(' Expr ')' '{' CaseExprList DefaultExpr '}'
  50       | LValue
  51       | Call
  52       | Constant
  53       | Expr '+' Expr
  54       | Expr '-' Expr
  55       | Expr '*' Expr
  56       | Expr '/' Expr
  57       | Expr '%' Expr
  58       | Expr EQUAL Expr
  59       | Expr NOT_EQUAL Expr
  60       | Expr '<' Expr
  61       | Expr '>' Expr
  62       | Expr LESS_EQUAL Expr
  63       | Expr GREATER_EQUAL Expr
  64       | Expr AND Expr
  65       | Expr OR Expr
  66       | '(' Expr ')'
  67       | '-' Expr
  68       | '!' Expr
  69       | '@' Expr
  70       | '$' Expr
  71       | '#' Expr
  72       | READ_INTEGER '(' ')'
  73       | READ_LINE '(' ')'
  74       | THIS
  75       | NEW IDENTIFIER '(' ')'
  76       | NEW Type '[' Expr ']'
  77       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  78       | '(' CLASS IDENTIFIER ')' Expr

  79  Constant : LITERAL
  80           | NULL

  81  Actuals : ExprList
  82          |

  83  ExprList : ExprList ',' Expr
  84           | Expr

  85  WhileStmt : WHILE '(' Expr ')' Stmt

  86  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

  87  BreakStmt : BREAK

  88  IfStmt : IF '(' Expr ')' Stmt ElseClause

  89  ElseClause : ELSE Stmt
  90             |

  91  ReturnStmt : RETURN Expr
  92             | RETURN

  93  PrintStmt : PRINT '(' ExprList ')'

  94  PrintCompStmt : PRINTCOMP '(' ExprList ')'

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	.  error

	Program  goto 2
	ClassList  goto 3
	ClassDef  goto 4


state 1
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (13)

	IDENTIFIER  shift 5
	.  error


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	$end  reduce 1

	ClassDef  goto 6


state 4
	ClassList : ClassDef .  (3)

	.  reduce 3


state 5
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (13)
	ExtendsClause : .  (15)

	EXTENDS  shift 7
	'{'  reduce 15

	ExtendsClause  goto 8


state 6
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 7
	ExtendsClause : EXTENDS . IDENTIFIER  (14)

	IDENTIFIER  shift 9
	.  error


state 8
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (13)

	'{'  shift 10
	.  error


state 9
	ExtendsClause : EXTENDS IDENTIFIER .  (14)

	.  reduce 14


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (13)
	FieldList : .  (18)

	.  reduce 18

	FieldList  goto 11


state 11
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (13)
	FieldList : FieldList . VariableDef  (16)
	FieldList : FieldList . FunctionDef  (17)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	COMPLEX  shift 16
	CLASS  shift 17
	STATIC  shift 18
	'}'  shift 19
	.  error

	VariableDef  goto 20
	Variable  goto 21
	Type  goto 22
	FunctionDef  goto 23


state 12
	Type : VOID .  (7)

	.  reduce 7


state 13
	Type : BOOL .  (8)

	.  reduce 8


state 14
	Type : INT .  (6)

	.  reduce 6


state 15
	Type : STRING .  (9)

	.  reduce 9


state 16
	Type : COMPLEX .  (10)

	.  reduce 10


state 17
	Type : CLASS . IDENTIFIER  (11)

	IDENTIFIER  shift 24
	.  error


state 18
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (23)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	COMPLEX  shift 16
	CLASS  shift 17
	.  error

	Type  goto 25


state 19
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (13)

	.  reduce 13


state 20
	FieldList : FieldList VariableDef .  (16)

	.  reduce 16


state 21
	VariableDef : Variable . ';'  (4)

	';'  shift 26
	.  error


state 22
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (12)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (24)

	IDENTIFIER  shift 27
	'['  shift 28
	.  error


state 23
	FieldList : FieldList FunctionDef .  (17)

	.  reduce 17


state 24
	Type : CLASS IDENTIFIER .  (11)

	.  reduce 11


state 25
	Type : Type . '[' ']'  (12)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 29
	'['  shift 28
	.  error


state 26
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 27
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (24)

	'('  shift 30
	';'  reduce 5


state 28
	Type : Type '[' . ']'  (12)

	']'  shift 31
	.  error


state 29
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 32
	.  error


state 30
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (24)
	Formals : .  (20)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	COMPLEX  shift 16
	CLASS  shift 17
	')'  reduce 20

	Variable  goto 33
	Type  goto 34
	Formals  goto 35
	VariableList  goto 36


state 31
	Type : Type '[' ']' .  (12)

	.  reduce 12


state 32
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (20)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	COMPLEX  shift 16
	CLASS  shift 17
	')'  reduce 20

	Variable  goto 33
	Type  goto 34
	Formals  goto 37
	VariableList  goto 36


state 33
	VariableList : Variable .  (22)

	.  reduce 22


state 34
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (12)

	IDENTIFIER  shift 38
	'['  shift 28
	.  error


state 35
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (24)

	')'  shift 39
	.  error


state 36
	Formals : VariableList .  (19)
	VariableList : VariableList . ',' Variable  (21)

	','  shift 40
	')'  reduce 19


state 37
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 41
	.  error


state 38
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 39
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (24)

	'{'  shift 42
	.  error

	StmtBlock  goto 43


state 40
	VariableList : VariableList ',' . Variable  (21)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	COMPLEX  shift 16
	CLASS  shift 17
	.  error

	Variable  goto 44
	Type  goto 34


state 41
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 42
	.  error

	StmtBlock  goto 45


state 42
	StmtBlock : '{' . StmtList '}'  (25)
	StmtList : .  (27)

	.  reduce 27

	StmtList  goto 46


state 43
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (24)

	.  reduce 24


state 44
	VariableList : VariableList ',' Variable .  (21)

	.  reduce 21


state 45
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 46
	StmtBlock : '{' StmtList . '}'  (25)
	StmtList : StmtList . Stmt  (26)
	SimpleStmt : .  (40)
	Receiver : .  (42)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	COMPLEX  shift 16
	CLASS  shift 17
	NULL  shift 47
	THIS  shift 48
	WHILE  shift 49
	FOR  shift 50
	IF  shift 51
	RETURN  shift 52
	BREAK  shift 53
	NEW  shift 54
	CASE  shift 55
	PRINT  shift 56
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	PRINTCOMP  shift 59
	LITERAL  shift 60
	INSTANCEOF  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	'{'  shift 42
	'}'  shift 65
	'@'  shift 66
	'$'  shift 67
	'#'  shift 68
	IDENTIFIER  reduce 42
	';'  reduce 40

	VariableDef  goto 69
	Variable  goto 21
	Type  goto 34
	StmtBlock  goto 70
	Stmt  goto 71
	SimpleStmt  goto 72
	IfStmt  goto 73
	WhileStmt  goto 74
	ForStmt  goto 75
	ReturnStmt  goto 76
	PrintStmt  goto 77
	BreakStmt  goto 78
	PrintCompStmt  goto 79
	LValue  goto 80
	Expr  goto 81
	Call  goto 82
	Receiver  goto 83
	Constant  goto 84


state 47
	Constant : NULL .  (80)

	.  reduce 80


state 48
	Expr : THIS .  (74)

	.  reduce 74


state 49
	WhileStmt : WHILE . '(' Expr ')' Stmt  (85)

	'('  shift 85
	.  error


state 50
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (86)

	'('  shift 86
	.  error


state 51
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (88)

	'('  shift 87
	.  error


state 52
	ReturnStmt : RETURN . Expr  (91)
	ReturnStmt : RETURN .  (92)
	Receiver : .  (42)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	CASE  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 60
	INSTANCEOF  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	'@'  shift 66
	'$'  shift 67
	'#'  shift 68
	IDENTIFIER  reduce 42
	';'  reduce 92

	LValue  goto 88
	Expr  goto 89
	Call  goto 90
	Receiver  goto 83
	Constant  goto 84


state 53
	BreakStmt : BREAK .  (87)

	.  reduce 87


state 54
	Expr : NEW . IDENTIFIER '(' ')'  (75)
	Expr : NEW . Type '[' Expr ']'  (76)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	COMPLEX  shift 16
	CLASS  shift 17
	IDENTIFIER  shift 91
	.  error

	Type  goto 92


state 55
	Expr : CASE . '(' Expr ')' '{' CaseExprList DefaultExpr '}'  (49)

	'('  shift 93
	.  error


state 56
	PrintStmt : PRINT . '(' ExprList ')'  (93)

	'('  shift 94
	.  error


state 57
	Expr : READ_INTEGER . '(' ')'  (72)

	'('  shift 95
	.  error


state 58
	Expr : READ_LINE . '(' ')'  (73)

	'('  shift 96
	.  error


state 59
	PrintCompStmt : PRINTCOMP . '(' ExprList ')'  (94)

	'('  shift 97
	.  error


state 60
	Constant : LITERAL .  (79)

	.  reduce 79


state 61
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (77)

	'('  shift 98
	.  error


state 62
	Expr : '-' . Expr  (67)
	Receiver : .  (42)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	CASE  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 60
	INSTANCEOF  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	'@'  shift 66
	'$'  shift 67
	'#'  shift 68
	IDENTIFIER  reduce 42

	LValue  goto 88
	Expr  goto 99
	Call  goto 90
	Receiver  goto 83
	Constant  goto 84


state 63
	Expr : '!' . Expr  (68)
	Receiver : .  (42)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	CASE  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 60
	INSTANCEOF  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	'@'  shift 66
	'$'  shift 67
	'#'  shift 68
	IDENTIFIER  reduce 42

	LValue  goto 88
	Expr  goto 100
	Call  goto 90
	Receiver  goto 83
	Constant  goto 84


state 64
	Expr : '(' . Expr ')'  (66)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (78)
	Receiver : .  (42)

	CLASS  shift 101
	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	CASE  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 60
	INSTANCEOF  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	'@'  shift 66
	'$'  shift 67
	'#'  shift 68
	IDENTIFIER  reduce 42

	LValue  goto 88
	Expr  goto 102
	Call  goto 90
	Receiver  goto 83
	Constant  goto 84


state 65
	StmtBlock : '{' StmtList '}' .  (25)

	.  reduce 25


state 66
	Expr : '@' . Expr  (69)
	Receiver : .  (42)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	CASE  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 60
	INSTANCEOF  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	'@'  shift 66
	'$'  shift 67
	'#'  shift 68
	IDENTIFIER  reduce 42

	LValue  goto 88
	Expr  goto 103
	Call  goto 90
	Receiver  goto 83
	Constant  goto 84


state 67
	Expr : '$' . Expr  (70)
	Receiver : .  (42)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	CASE  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 60
	INSTANCEOF  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	'@'  shift 66
	'$'  shift 67
	'#'  shift 68
	IDENTIFIER  reduce 42

	LValue  goto 88
	Expr  goto 104
	Call  goto 90
	Receiver  goto 83
	Constant  goto 84


state 68
	Expr : '#' . Expr  (71)
	Receiver : .  (42)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	CASE  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 60
	INSTANCEOF  shift 61
	'-'  shift 62
	'!'  shift 63
	'('  shift 64
	'@'  shift 66
	'$'  shift 67
	'#'  shift 68
	IDENTIFIER  reduce 42

	LValue  goto 88
	Expr  goto 105
	Call  goto 90
	Receiver  goto 83
	Constant  goto 84


state 69
	Stmt : VariableDef .  (28)

	.  reduce 28


state 70
	Stmt : StmtBlock .  (36)

	.  reduce 36


state 71
	StmtList : StmtList Stmt .  (26)

	.  reduce 26


state 72
	Stmt : SimpleStmt . ';'  (29)

	';'  shift 106
	.  error


state 73
	Stmt : IfStmt .  (30)

	.  reduce 30


state 74
	Stmt : WhileStmt .  (31)

	.  reduce 31


state 75
	Stmt : ForStmt .  (32)

	.  reduce 32


state 76
	Stmt : ReturnStmt . ';'  (33)

	';'  shift 107
	.  error


state 77
	Stmt : PrintStmt . ';'  (34)

	';'  shift 108
	.  error


state 78
	Stmt : BreakStmt . ';'  (35)

	';'  shift 109
	.  error


state 79
	Stmt : PrintCompStmt . ';'  (37)

	';'  shift 110
	.  error


state 80
	SimpleStmt : LValue . '=' Expr  (38)
	Expr : LValue .  (50)

	'='  shift 111
	AND  reduce 50
	OR  reduce 50
	LESS_EQUAL  reduce 50
	GREATER_EQUAL  reduce 50
	EQUAL  reduce 50
	NOT_EQUAL  reduce 50
	'+'  reduce 50
	'-'  reduce 50
	'*'  reduce 50
	'/'  reduce 50
	'%'  reduce 50
	'>'  reduce 50
	'<'  reduce 50
	'.'  reduce 50
	'['  reduce 50

